--- a/styles.css
+++ b/styles.css
@@ -96,5 +96,13 @@ footer {
 
 a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    background-color: white;
+}
+
+img {
+    display: block;
+    margin: auto;
+    width: 300px;
+    height: 377px;
 }
