--- a/styles.css
+++ b/styles.css
@@ -1,108 +1,118 @@
 body {
-    background-color: rgb(188, 162, 121);
-    background-image: url(images/Repeating_Newsprint_Pattern.png);
-    background-size: 160px;
+    background-color: #2E2725;
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.79);
-    height: 200px;
-    width: 800px;
-    align-items: center;
-    border: solid;
-    border-width: 5px;
-    border-radius: 600px;
-    margin: auto;
-    margin-top: 20px;
+    background-color: #4E3C3C;
+    border-radius: 0px 0px 80px 80px;
+    height: 250px;
+    box-shadow: 0 8px 0 5px rgba(0, 0, 0, 0.25);
 }
 
 h1 {
-    text-align: center;
-    margin: 0;
-    font-family: "Bangers", system-ui;
+    font-family: "Limelight", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 100px;
-    color: rgb(25, 117, 255);
-    text-shadow: -7px 5px 0 #000;
-    /* background-color: #000; */
-    
+    font-size: 64px;
+    color: #D1C0B6;
+    text-shadow: -4px 4px 0 rgba(0, 0, 0, 0.93);
+    width: 375px;
+    margin: 0px;
+    padding: 25px 0px 20px 80px;
+    position: relative;
 }
 
 h2 {
-    text-align: center;
-    margin: 0;
-    padding: 5px;
-    font-family: "Actor", sans-serif;
-    font-weight: 400;
+    color: #D1C0B6;
+    font-family: "Special Elite";
+    font-size: 20px;
     font-style: normal;
-    color: rgb(255, 242, 232);
+    font-weight: 400;
+    line-height: normal;
+    margin: 0px;
+    padding-left: 80px;
 }
 
-main {
-    background-color: rgba(255, 255, 255, 0.497);
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    border-top: solid;
-    border-width: 5px;
+img.maglass {
+    rotate: -45deg;
+    scale: .4;
+    position: absolute;
+    top: -120px;
+    left: 370px;
+    animation: flip 2s ease-in-out infinite alternate;
+}
+
+@keyframes flip {
+    from {transform: rotate(-30deg);}
+    to {transform: rotate(50deg);}
+}
+
+h3, a {
+    color: #342A27;
+    font-family: "Special Elite";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 h3 {
-    margin: 10px 0px 10px 10px;
-    font-family: "Actor", sans-serif;
-    font-weight: bolder;
-    font-style: normal;
-}
-
-article {
-    /* background-color: rgb(255, 255, 255); */
-    margin: 30px 20px 30px 20px;
-    width: 250px;
-    height: 400px;
-    border-width: 5px;
-    border-style: solid;
-}
-
-.ml {
-    height: 83px;
-}
-
-.pic {
-    height: 65px;
-}
-
-p {
+    font-size: 24px;
     text-align: center;
-    margin: 0;
-    border-style: solid;
-    border-width: 5px 0px 0px 0px;
-    height: 115px;
-    font-family: "Montserrat", sans-serif;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
+main {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 104px;
 }
 
 div {
-    margin: auto;
-    width: 100%;
+    background-color: #D1C0B6;
+    border-radius: 10px;
+    box-shadow: 0 11px 0 5px rgba(0, 0, 0, 0.47);
+    height: 306px;
+    width: 260px;
+    margin: 10px;
 }
 
-footer {
-    background-color: rgba(0, 0, 0, 0.79);
-    height: 30px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    color: white;
+ul {
+    margin: 0px;
+    padding-left: 30px;
 }
 
 a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    background-color: white;
+    font-size: 18px;
+    line-height: 45px;
+    padding-right: 5px;
+    
 }
 
-img {
-    display: block;
+li {
+    transition: transform .5s;
+}
+
+li:hover {
+    transform: scale(1.2) translate(20px);
+}
+
+footer {
+    background-color: #4E3C3C;
+    display: flex;
+    height: 40px;
+}
+
+.footer {
+    font-family: "Inter", sans-serif;
+    color: #D1C0B6;
+    margin: 0px;
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
     margin: auto;
-    width: 300px;
-    height: 377px;
 }
